; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_audio_in.c_audio_dsp_set_tx_iir.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_audio_in.c_audio_dsp_set_tx_iir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audio_in = type { %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i32, i32 }
%struct.audpre_cmd_iir_config_type = type { i32, i32, i32, i32 }

@AUDPREPROC_CMD_CFG_IIR_TUNING_FILTER_PARAMS = common dso_local global i32 0, align 4
@AUDPREPROC_CMD_IIR_ACTIVE_FLAG_ENA = common dso_local global i32 0, align 4
@AUDPREPROC_CMD_IIR_ACTIVE_FLAG_DIS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.audio_in*)* @audio_dsp_set_tx_iir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @audio_dsp_set_tx_iir(%struct.audio_in* %0) #0 {
  %2 = alloca %struct.audio_in*, align 8
  %3 = alloca %struct.audpre_cmd_iir_config_type, align 4
  store %struct.audio_in* %0, %struct.audio_in** %2, align 8
  %4 = call i32 @memset(%struct.audpre_cmd_iir_config_type* %3, i32 0, i32 16)
  %5 = load i32, i32* @AUDPREPROC_CMD_CFG_IIR_TUNING_FILTER_PARAMS, align 4
  %6 = getelementptr inbounds %struct.audpre_cmd_iir_config_type, %struct.audpre_cmd_iir_config_type* %3, i32 0, i32 1
  store i32 %5, i32* %6, align 4
  %7 = load %struct.audio_in*, %struct.audio_in** %2, align 8
  %8 = getelementptr inbounds %struct.audio_in, %struct.audio_in* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %24

11:                                               ; preds = %1
  %12 = load i32, i32* @AUDPREPROC_CMD_IIR_ACTIVE_FLAG_ENA, align 4
  %13 = getelementptr inbounds %struct.audpre_cmd_iir_config_type, %struct.audpre_cmd_iir_config_type* %3, i32 0, i32 0
  store i32 %12, i32* %13, align 4
  %14 = load %struct.audio_in*, %struct.audio_in** %2, align 8
  %15 = getelementptr inbounds %struct.audio_in, %struct.audio_in* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = getelementptr inbounds %struct.audpre_cmd_iir_config_type, %struct.audpre_cmd_iir_config_type* %3, i32 0, i32 3
  store i32 %17, i32* %18, align 4
  %19 = getelementptr inbounds %struct.audpre_cmd_iir_config_type, %struct.audpre_cmd_iir_config_type* %3, i32 0, i32 2
  %20 = load %struct.audio_in*, %struct.audio_in** %2, align 8
  %21 = getelementptr inbounds %struct.audio_in, %struct.audio_in* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = call i32 @memcpy(i32* %19, i32* %22, i32 4)
  br label %27

24:                                               ; preds = %1
  %25 = load i32, i32* @AUDPREPROC_CMD_IIR_ACTIVE_FLAG_DIS, align 4
  %26 = getelementptr inbounds %struct.audpre_cmd_iir_config_type, %struct.audpre_cmd_iir_config_type* %3, i32 0, i32 0
  store i32 %25, i32* %26, align 4
  br label %27

27:                                               ; preds = %24, %11
  %28 = load %struct.audio_in*, %struct.audio_in** %2, align 8
  %29 = call i32 @audio_send_queue_pre(%struct.audio_in* %28, %struct.audpre_cmd_iir_config_type* %3, i32 16)
  ret i32 %29
}

declare dso_local i32 @memset(%struct.audpre_cmd_iir_config_type*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @audio_send_queue_pre(%struct.audio_in*, %struct.audpre_cmd_iir_config_type*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
